--- a/WWR-Website/Site_Plan_Rafting.html
+++ b/WWR-Website/Site_Plan_Rafting.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home_Page</title>
+    <title>Site_Planing_Rafting</title>
 </head>
 <body>
-    <h1>This is my Home Page</h1>
+    <h1>Site Planning for White Water Rafting</h1>
 </body>
 </html>
