--- a/WWR-Website/WWR_Project/Site_Plan_Rafting.html
+++ b/WWR-Website/WWR_Project/Site_Plan_Rafting.html
@@ -6,9 +6,9 @@
 
 <body data-new-gr-c-s-check-loaded="14.1058.0" data-gr-ext-installed="">
   <header>
-    <h1>[Site name] Site Plan</h1>
-    <h2>[FirstName LastName]</h2>
-    <h2>WDD 130-[section]</h2>
+    <h1>The White Waters Site Plan</h1>
+    <h2>Dakota Walters</h2>
+    <h2>WDD 130-Section 2</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -16,18 +16,18 @@
     <hr>
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
+    <p>Our purpose here at White Waters is to provide a fun, thriling safe white water rafting experience for beginners, adepts, and pros. Our rivers boost class 1-5 rapids so there is a section of river for everyone here at White Water!</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
+    <p>Our Target audience is anyone looking to have a fun time! Parents, kids, teenagers, young adults, adults, even older adults, everyone is welcome at the White Waters!</p>
     <!-- change this -->
 
     <hr>
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image">
+    <img src="Images/ffaba92cbd9ce224f5af2c8739e048c3.webp" alt="Logo image">
     <hr>
     <h2>Style Guide</h2>
 
@@ -62,11 +62,11 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: [Lato]
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: [Radio+Canada]
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
