I don't know what I am doing

--- a/WWR-Website/Site_Plan_Rafting.html
+++ b/WWR-Website/Site_Plan_Rafting.html
@@ -3,12 +3,12 @@
     <title>Site Plan</title>
     <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css">
   </head>
-  
+
   <body data-new-gr-c-s-check-loaded="14.1058.0" data-gr-ext-installed="">
     <header>
-      <h1>[Site name] Site Plan</h1>
-      <h2>[FirstName LastName]</h2>
-      <h2>WDD 130-[section]</h2>
+      <h1>Dry Oar Site Plan</h1>
+      <h2>Dakota Walters</h2>
+      <h2>WDD 130-Section 2</h2>
       <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
     </header>
     <main>
@@ -16,11 +16,11 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>[Your purpose here]</p>
+      <p>The purpose of this website is to make it super easy to gain access to a fun time on the white waters through education and information, easy sign ups and wavers, and cheap prices afforable for all! </p>
       <!-- change this -->
   
       <h3>Audience</h3>
-      <p>[Your audience here]</p>
+      <p>Our Target audience is anyone who wants to have fun white water rafting and enjoying the great beauties of this earth! Families, Young Adults, Old Adults, Classes from Schools, groups of Teenagers, everyone is welcome on the waters of Dry Oar</p>
       <!-- change this -->
   
       <hr>
