--- a/About_Me_Project/Index.html starting project.html
+++ b/About_Me_Project/Index.html starting project.html
@@ -7,13 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-s">
     <title>WDD 130 Lesson One Awesome Wedbpage </title>
-    <Link rel="stylesheet" href="style.css">
+    <Link rel="stylesheet" href="TextBold_TextBlue.css">
 
 </head>
 
 <body>
 <h1>WDD 130 - Web Fundamentals </h1>
 <p> This is an example of a self made web page</p>
+<link rel=stylesheet href="TextBold_TextBlue.css">
 </body>
 
 </html>
