--- a/WRR_Project/Site_Plan_Rafting.html
+++ b/WRR_Project/Site_Plan_Rafting.html
@@ -1,7 +1,7 @@
 <html lang="en-us"><head>
     <meta charset="utf-8">
     <title>Site Plan</title>
-    <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css">
+    <link rel="stylesheet" href="Styles/Site_Plan_Style.css">
   </head>
   
   <body data-new-gr-c-s-check-loaded="14.1058.0" data-gr-ext-installed="">
