--- a/About_Me_Project/Super.fun.html
+++ b/About_Me_Project/Super.fun.html
@@ -9,7 +9,8 @@
 
 </head>
 <body>
-    <p>I really like fun!!!</p>
+    <h1 class="boldText">Lesson 3 </h1>
+    <p class=blueText> I really like fun!!!</p>
     <p>  </p>
     <a href="AWESOMEPEOPLE.html"> "Go Home" </a>
     ,<button>Awesome <Button></Button></button>
