--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <a href="./WDD130 HTML FILES/WRR_Project/Site_Plan_Rafting.html"> Site Plan Rafting</a>
     <a href="./WDD130 HTML FILES/WRR_Project/Site_Home_Page.html">Site Home Site_Home_Page</a>
+    <a href="/WRR_Project/positioning.html">Positioning Practice</a>
 </body>
 </html>
