--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./WDD130 HTML FILES/WRR_Project/Site_Plan_Rafting.html"> Site Plan Rafting</a>
+    <a href="/WRR_Project/Site_Home_Page.html"> Site Plan Rafting</a>
     <h1>  </h1>
-    <a href="./WDD130 HTML FILES/WRR_Project/Site_Home_Page.html">Site Home Site_Home_Page</a>
+    <a href="/WRR_Project/Site_Plan_Rafting.html">Site Home Site_Home_Page</a>
     <h1>  </h1>
     <a href="/WRR_Project/positioning.html">Positioning Practice</a>
 </body>
