Added ./ to all HREFs

--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/WRR_Project/Site_Home_Page.html"> Site Plan Rafting</a>
+    <a href="./WRR_Project/Site_Home_Page.html"> Site Plan Rafting</a>
     <h1>  </h1>
-    <a href="/WRR_Project/Site_Plan_Rafting.html">Site Home Site_Home_Page</a>
+    <a href="./WRR_Project/Site_Plan_Rafting.html">Site Home Site_Home_Page</a>
     <h1>  </h1>
-    <a href="/WRR_Project/positioning.html">Positioning Practice</a>
+    <a href="./WRR_Project/positioning.html">Positioning Practice</a>
 </body>
 </html>
