--- a/index.html
+++ b/index.html
@@ -12,5 +12,7 @@
     <a href="./WRR_Project/Site_Plan_Rafting.html">Site Home Site_Home_Page</a>
     <h1>  </h1>
     <a href="./WRR_Project/positioning.html">Positioning Practice</a>
+    <h1> </h1>
+    <a href="./WRR_Project/Site-Plan.html"> Personal Site Plan </a>
 </body>
 </html>
