--- a/WRR_Project/Site_Home_Page.html
+++ b/WRR_Project/Site_Home_Page.html
@@ -20,11 +20,11 @@
 </header>
 <div id="hero">
     <div id="hero-box">
-        <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
+        <img class="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
     </div>
     <section id="hero-msg">
         <h1 class="home-title">Have An Adventure</h1>
-        <h4 class="h4">Make Memories with The White Waters </h4>
+        <h4 class="h44">Make Memories with The White Waters </h4>
         <div class='button-box'>
             <a class='book' href="rates.html">Book Now</a>
         </div>
