--- a/WRR_Project/Site-Plan.html
+++ b/WRR_Project/Site-Plan.html
@@ -1,7 +1,7 @@
 <html lang="en-us"><head>
     <meta charset="utf-8">
     <title>Site Plan</title>
-    <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
+    <link type="text/css" rel="stylesheet" href="styles/Site-Plan.css">
   </head>
 
   <body data-new-gr-c-s-check-loaded="14.1062.0" data-gr-ext-installed="">
