--- a/WRR_Project/Site_Plan_Rafting.html
+++ b/WRR_Project/Site_Plan_Rafting.html
@@ -117,6 +117,7 @@
   
       <h3>[Page 2]</h3>
   
-      <!-- <img src="#" alt="page 2 wireframe"> -->
+      <img src="images/Screenshot 2022-06-11 234446.png" alt="page 2 wireframe">
+      
     </main>
   
