--- a/WRR_Project/Site-Plan.html
+++ b/WRR_Project/Site-Plan.html
@@ -182,7 +182,7 @@
       <p>         
        
       </p>
-      <img src="images/web-wireframe-cover.png" alt="page 3 wireframe">
+      <img src="images/Wireframe_Page3.png" alt="page 3 wireframe">
     </main>
   
 
