--- a/WRR_Project/Site-Plan.html
+++ b/WRR_Project/Site-Plan.html
@@ -176,7 +176,7 @@
       <p>         
        
       </p>
-      <img src="images/wireframe.png" alt="page 2 wireframe">
+      <img src="images/Wireframe_page2.png" alt="page 2 wireframe">
 
       <h3>[Page 3]</h3>
       <p>         
