--- a/WRR_Project/Site_Plan_Rafting.html
+++ b/WRR_Project/Site_Plan_Rafting.html
@@ -117,7 +117,7 @@
   
       <h3>[Page 2]</h3>
   
-      <img src="images/wireframe_rafting_page1.png" alt="page 2 wireframe">
+      <img class="wireframe" src="images/wireframe_rafting_page1.png" alt="page 2 wireframe">
       
     </main>
   
