--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <a href="./WRR_Project/Site_Home_Page.html"> Site Plan Rafting</a>
     <h1>  </h1>
-    <a href="./WRR_Project/Site_Plan_Rafting.html">Site Home Site_Home_Page</a>
+    <a href="./WRR_Project/Site_Plan_Rafting.html">Site Home Page</a>
     <h1>  </h1>
     <a href="./WRR_Project/Positioning.html">Positioning Practice</a>
     <h1> </h1>
     <a href="./WRR_Project/Site-Plan.html"> Personal Site Plan </a>
     <h1> </h1>
-    <a href="./WRR_Project/Site_Subpage_Rafting.html">Positioning Practice</a>
+    <a href="./WRR_Project/Site_Subpage_Rafting.html">Site Subpage Rafting</a>
     <h1>...</h1>
 </body>
 </html>
