--- a/WRR_Project/Site_Plan_Rafting.html
+++ b/WRR_Project/Site_Plan_Rafting.html
@@ -89,9 +89,9 @@
       <h3>Navigation</h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Contact Us</a>
+        <a href="./Site_Home_Page.html">Home</a>
+        <a href="./Site_Subpage_Rafting.html">Page2</a>
+        <a href="/index.html">Contact Us</a>
       </nav>
       <hr>
       <h2>Site Map</h2>
