--- a/WRR_Project/Site_Subpage_Rafting.html
+++ b/WRR_Project/Site_Subpage_Rafting.html
@@ -12,9 +12,9 @@
           <img class="logo" src="images/ffaba92cbd9ce224f5af2c8739e048c3.webp" alt="The White Waters Logo">
      </a>
      <nav>
-        <a href="index.html">Home</a>
-        <a href="#">Page 2</a>
-        <a href="site-plan-rafting.html">Site Plan</a>
+        <a href="./Site_Home_Page.html">Home</a>
+        <a href="./Site_Subpage_Rafting.html">Page 2</a>
+        <a href="./Site_Plan_Rafting.html">Site Plan</a>
         <a href="contactus.html">Contact Us</a>
      </nav>
 </header>
