--- a/WRR_Project/Site_Subpage_Rafting.html
+++ b/WRR_Project/Site_Subpage_Rafting.html
@@ -12,16 +12,16 @@
           <img class="logo" src="images/ffaba92cbd9ce224f5af2c8739e048c3.webp" alt="The White Waters Logo">
      </a>
      <nav>
-        <a href="./Site_Home_Page.html">Home</a>
+        <a class="headtext" href="./Site_Home_Page.html">Home</a>
         <a href="./Site_Subpage_Rafting.html">Page 2</a>
         <a href="./Site_Plan_Rafting.html">Site Plan</a>
-        <a href="contactus.html">Contact Us</a>
+        <a href="/index.html">Contact Us</a>
      </nav>
 </header>
 <footer>
     <h3>The White Waters &copy; 2022 - Dakota Walters</h3>
-    <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
-    <h3><a href="contactus.html">Contact Us</a></h3>
+    <h3><a href="./Site_Plan_Rafting.html">Site Plan</a></h3>
+    <h3><a href="/index.html">Contact Us</a></h3>
     <div class="social">
         <a href="https://facebook.com">
             <img src="images/facebook.png" alt="fb icon">
