--- a/WRR_Project/Site_Home_Page.html
+++ b/WRR_Project/Site_Home_Page.html
@@ -13,7 +13,7 @@
      </a>
      <nav>
         <a href="./Site_Home_Page.html">Home</a>
-        <a href="./Site_Subpage_Rafting.html">Page 2</a>
+        <a href="./Site_Subpage_Rafting.html">Information</a>
         <a href="./Site_Plan_Rafting.html">Site Plan</a>
         <a href="contactus.html">Contact Us</a>
      </nav>
