--- a/WRR_Project/Site_Home_Page.html
+++ b/WRR_Project/Site_Home_Page.html
@@ -15,7 +15,7 @@
         <a href="./Site_Home_Page.html">Home</a>
         <a href="./Site_Subpage_Rafting.html">Information</a>
         <a href="./Site_Plan_Rafting.html">Site Plan</a>
-        <a href="contactus.html">Contact Us</a>
+        <a href="./contactus.html">Contact Us</a>
      </nav>
 </header>
 <div id="hero">
