--- a/WRR_Project/Site_Plan_Rafting.html
+++ b/WRR_Project/Site_Plan_Rafting.html
@@ -91,7 +91,7 @@
       <nav>
         <a href="./Site_Home_Page.html">Home</a>
         <a href="./Site_Subpage_Rafting.html">Page2</a>
-        <a href="/index.html">Contact Us</a>
+        <a href="./contactus.html">Contact Us</a>
       </nav>
       <hr>
       <h2>Site Map</h2>
