--- a/WRR_Project/Site-Plan.html
+++ b/WRR_Project/Site-Plan.html
@@ -118,7 +118,7 @@
       <h3>Home page</h3>
       <p class="bold">
         First Idea A Welcome Personal Fitness</p>
-        <p>The first idea is to act like your read is smart and intelligent but is still new to this whole working out thing. Alot of people will lose motivation or desire if they feel that they are doing what they are doing wrong because they are new, or pay attention to how far other people are on their journey and then look at them selves and not see the same results. Educating then on the gym educate, personal goals, and consistance plus determination and they can achieve any physical aspect they put their minds too. Let them achieve the full potental in which their bodies are capable of!</p>
+        <p>The first idea is to act like your reader is smart and intelligent but is still new to this whole working out thing. Alot of people will lose motivation or desire if they feel that they are doing what they are doing wrong because they are new, or pay attention to how far other people are on their journey and then look at them selves and not see the same results. Educating then on the gym educate, personal goals, and consistance plus determination and they can achieve any physical aspect they put their minds too. Let them achieve the full potental in which their bodies are capable of!</p>
         <P class="bold">Second Idea Locations of Nearby FIT NET gyms</P>
         <p> In this section of the website we will have our lists of near by FIT NET gyms in the rexburg area. This will allow them to pick the best location possible for them in the rex burg and idaho falls and rigbey areas.  </p>
         <p>Images for the Home page</p>
