--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <a href="./WRR_Project/Site-Plan.html"> Personal Site Plan </a>
     <h1> </h1>
     <a href="./WRR_Project/Site_Subpage_Rafting.html">Site Subpage Rafting</a>
+    <h1> </h1>
+    <a href="./WRR_Project/Site-Plan-HomePage"> Personal Site Homepage</a>
     <h1>...</h1>
 </body>
 </html>
