content for pages

--- a/WRR_Project/Site-HomePage.html
+++ b/WRR_Project/Site-HomePage.html
@@ -9,31 +9,44 @@
 <body>
     <header>
     <a id="logo_link" href="index.html">
-        <img class="logo" src="images/ffaba92cbd9ce224f5af2c8739e048c3.webp" alt="The White Waters Logo">
+        <img class="logo" src="images/gym_v1.0.jpg" alt="NetFit Logo">
         </a>
          <nav>
-        <a href="./Site_Home_Page.html">Home</a>
-        <a href="./Site_Subpage_Rafting.html">Information</a>
-        <a href="./Site_Plan_Rafting.html">Site Plan</a>
-               <a href="./contactus.html">Contact Us</a>
+        <a href="./Site-HomePage.html">Home</a>
+        <a href="./Site-WorkoutPlans.html">Trainers and Workouts</a>
+        <a href="./Site-SupplimentPage.html">Meals and Suppliments</a>
+               <a href="./contactusforfitnet..html">Contact Us</a>
             </nav>
-       </header>
+        </header>
        <div id="hero">
            <div id="hero-box">
-               <img class="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
+               <img class="hero-img" src="images/Image.jpg" alt="Gym Equpiment">
            </div>
            <section id="hero-msg">
                <h1 class="home-title">Welcome to Fitnet</h1>
                
-               <div class='button-box'>
+ 
                </div>
            </section>
        </div>
+       <main>
+        <p> Welcome to Fitnet. Here we are driven to help you achieve your full potential through our gyms, workout plans, and suppliments along with trainers 24/7! We will help you achieve the body type you want and we will be with you all the way! Our locations are open 24/7 and are state of the art facilities taht are equipped with carido, muscle, and recovery machinces, there is something for everyone!</p>4
+        <img src="./images/11-Beach-gym.png">
+        <h2>Our Locations </p>
+            <img src="./images/Locations.jpg">
+            <p>370 W 7th S Rexburg, Id</p>
+            <img src="./images/The-Greenpoint-gym.jpg">
+            <p>110 E 9th N Rexburg, Id</p>
+            <img src="./images/397-TorranceDelAmo-01-900x650.jpg">
+            <p>550 W 21 N Rexburg, Id</p>
+            <img src="./images/Two-Fifty-West-81st-gym.jpg">
+
+        
        </main>
        <footer>
-           <h3>The White Waters &copy; 2022 - Dakota Walters</h3>
+           <h3>Fitnet &copy; 2022 - Dakota Walters</h3>
            <h3><a href="Site-Plan.html">Site Plan</a></h3>
-           <h3><a href="contactus.html">Contact Us</a></h3>
+           <h3><a href="contactusforfitnet..html">Contact Us</a></h3>
            <div class="social">
                <a href="https://facebook.com">
                    <img src="images/facebook.png" alt="fb icon">
