--- a/WRR_Project/contactusforfitnet..html
+++ b/WRR_Project/contactusforfitnet..html
@@ -4,29 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitewater Rafting Vacations / The White Waters / Home</title>
-    <link rel="stylesheet" href="./styles/Style.css">
+    <title>Personal Site Home Page</title>
+    <link type="text/css" rel="stylesheet" href="./styles/personalstyle.css"> 
 <body>
- <header>
-     <a id="logo_link" href="index.html">
-          <img class="logo" src="images/ffaba92cbd9ce224f5af2c8739e048c3.webp" alt="The White Waters Logo">
-     </a>
-     <nav>
-        <a href="./Site_Home_Page.html">Home</a>
-        <a href="./Site_Subpage_Rafting.html">Information</a>
-        <a href="./Site_Plan_Rafting.html">Site Plan</a>
-        <a href="./contactus.html">Contact Us</a>
-     </nav>
+    <header>
+    <a id="logo_link" href="index.html">
+        <img class="logo" src="images/gym_v1.0.jpg" alt="NetFit Logo">
+        </a>
+         <nav>
+        <a href="./Site-HomePage.html">Home</a>
+        <a href="./Site-WorkoutPlans.html">Trainers and Workouts</a>
+        <a href="./Site-SupplimentPage.html">Meals and Suppliments</a>
+               <a href="./contactusforfitnet..html">Contact Us</a>
+            </nav>
 </header>
 <div id="hero">
     <div id="hero-box">
-        <img class="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
+        <img class="hero-img" src="images/Image.jpg" alt="People enjoying white water rafting">
     </div>
     <section id="hero-msg">
-        <h1 class="home-title">Have An Adventure</h1>
-        <h4 class="h44">Make Memories with The White Waters </h4>
+        <h1 class="home-title">CONTACT US!!!</h1>
+        <h4 class="h44"></h4>
         <div class='button-box'>
-            <a class='book' href="rates.html">Book Now</a>
         </div>
     </section>
 </div>
@@ -47,7 +46,7 @@
               <textarea id="msg" name="user_message"></textarea>
             </li>
            </ul>
-           <input type="text" value="by default this element is filled with this text">
+           <input type="text" value="">
            <li class="button">
             <button type="submit">Send your message</button>
           </li>
@@ -55,8 +54,8 @@
 </main>
 <footer>
     <h3>The White Waters &copy; 2022 - Dakota Walters</h3>
-    <h3><a href="site-plan-rafting.html">Site Plan</a></h3>
-    <h3><a href="contactus.html">Contact Us</a></h3>
+    <h3><a href="Site-Plan.html">Site Plan</a></h3>
+    <h3><a href="contactusforfitnet..html">Contact Us</a></h3>
     <div class="social">
         <a href="https://facebook.com">
             <img src="images/facebook.png" alt="fb icon">
