Final Pages Added

--- a/index.html
+++ b/index.html
@@ -17,7 +17,11 @@
     <h1> </h1>
     <a href="./WRR_Project/Site_Subpage_Rafting.html">Site Subpage Rafting</a>
     <h1> </h1>
-   
+    <a href="./WRR_Project/Site-HomePage.html">Personal Site Homepage</a>
+    <h1> </h1>
+    <a href="./WRR_Project/Site-WorkoutPlans.html">Workout Plans Subpage</a>
+    <h1> </h1>
+    <a href="./WRR_Project/Site-SupplimentPage.html">Suppliment and Meals Page</a>
     <h1>...</h1>
 </body>
 </html>
