updated index page

--- a/WRR_Project/Site-Plan.html
+++ b/WRR_Project/Site-Plan.html
@@ -79,9 +79,9 @@
       </h3>
      
       <nav>
-        <a href="#">Home</a>
-        <a class=center href="#">Workout Plans</a>
-        <a href="#">Meal Plans</a>
+        <a href="./Site-HomePage.html">Home</a>
+        <a class=center href="./Site-WorkoutPlans.html">Workout Plans</a>
+        <a href="./Site-SupplimentPage.html">Meal Plans</a>
       </nav>
       <hr>
       <h2>
