final content for website

--- a/WRR_Project/Site-SupplimentPage.html
+++ b/WRR_Project/Site-SupplimentPage.html
@@ -24,8 +24,21 @@
            </div>
            <section id="hero-msg">
                <h1 class="home-title">Meals and Suppliments</h1>
-               
-
+               <p>Types of Protein</p>
+               <img src="./images/download.jpg">
+               <p> Isolate Protein: Is the best and most expensive kind of protein, it is taken from Whey protein and laced with enzynes that help the speed of protein breakdown in the stomach so you get more protein in your system quicker after a workout to maximize your gains!</p>
+               <img src="./images/R.jpg">
+               <p> Whey Protein: Most basic and cheapest form of protein, it is whey protein which is taken from pure milk with not added preseritives, you can get about 30 grams per hour so this protein is good to take multiple times a day.</p>
+               <img src="./images/001875633.webp">
+               <p> Organic Protein: Our organic protein is taken from plant extract and peanuts for a great source of fully vegtarian protein powder that can be digested in 20 grams per hour</p>
+            <p> </p>
+            <p> </p>
+            <p> </p>
+            <p> </p>
+            <h1>Suppliment and Meal Plans</h1>
+            <p> Our list of suppliments include, Melationing for sleep aid, vitamins for bodly aid, and pre workouts to maximze your workouts. For more information click on to our contact us page for more imformation on buying or basic inforamtion regarding our suppliments. </p>
+            <p> Meal plans are increably important to your post owkrout recovery and building mucsle. Most of your protein should come from your meals outside of your protein shakes. Our meal plans will allow you to find the best foods for your desired calory in take. For access to our mailed meal plans contact us through our email service!</p>
+            
                </div>
            </section>
        </div>
