--- a/WRR_Project/Site-WorkoutPlans.html
+++ b/WRR_Project/Site-WorkoutPlans.html
@@ -24,8 +24,17 @@
            </div>
            <section id="hero-msg">
                <h1 class="home-title">Trainers and Workouts</h1>
-               
-
+            <img src="./images/OIP (1).jpg"   >
+            <p> There are three body types. Slim, Lean, and Bulked. Each has there out plan to either gainning muscle, defining their current muscle, or losing weight to become slimmer" </p>
+            <p> Workouts for slimmer bodies will consist of 12-15 reps for about 4-5 sets to help with range of motion, about a 60 minute session at a time for workouts, and eating at least 3000 calories per day, and this style of workouts help to develop basic underlining muscles. </p>
+            <p>Workouts for Leaner builds will consist of reps from 8-12 for 4-5 sets, using heavier weights but staying in the constant tension, calory intake should be about 2800-3000, this style of owrkout with help gain lean msucle but not size, and will help define exsistine muscles. </p>
+            <p>Workouts for bulkier builds are 5-8 of heave weight, this will help develop largeness of muscles, strenght, and fuller body control, calory intake should be able 3200-3500 per day to develop size and strength, it will be layering mucsle on top of muscle</p>
+            <img src="./images/OIP (2).jpg">
+            <p> Ken Adams, Age 33, Phone Number 888-999-0000, Availiable: Mondays-Sundays 7:30am-12:30pm</p>
+            <p> Keller Thompson, Age 27, Phone Number 999-888-1111, Availiable: Mondays-Sundays 11:30am-5:30pm</p>
+            <p> Claire Woodly, Age 30, Phone Number 555-777-2222, Availiable: Mondays-Sundays 5:30pm-12:30am</p>
+            <p> Mason Murray, Age 37, Phone Number 222-444-3333, Availiable: Mondays-Sundays 10:30pm-4:30am</p>
+            <h3>CAll OUT NUMBER 333-444-5555 for more information of our trainers and specific workout plans </h3>
                </div>
            </section>
        </div>
