--- a/WRR_Project/Site-WorkoutPlans.html
+++ b/WRR_Project/Site-WorkoutPlans.html
@@ -34,7 +34,7 @@
             <p> Keller Thompson, Age 27, Phone Number 999-888-1111, Availiable: Mondays-Sundays 11:30am-5:30pm</p>
             <p> Claire Woodly, Age 30, Phone Number 555-777-2222, Availiable: Mondays-Sundays 5:30pm-12:30am</p>
             <p> Mason Murray, Age 37, Phone Number 222-444-3333, Availiable: Mondays-Sundays 10:30pm-4:30am</p>
-            <h3>CAll OUT NUMBER 333-444-5555 for more information of our trainers and specific workout plans </h3>
+            <h3>CAll OUR NUMBER 333-444-5555 for more information of our trainers and specific workout plans </h3>
                </div>
            </section>
        </div>
