--- a/WRR_Project/Site-HomePage.html
+++ b/WRR_Project/Site-HomePage.html
@@ -30,16 +30,17 @@
            </section>
        </div>
        <main>
-        <p> Welcome to Fitnet. Here we are driven to help you achieve your full potential through our gyms, workout plans, and suppliments along with trainers 24/7! We will help you achieve the body type you want and we will be with you all the way! Our locations are open 24/7 and are state of the art facilities taht are equipped with carido, muscle, and recovery machinces, there is something for everyone!</p>4
-        <img src="./images/11-Beach-gym.png">
+        <p> Welcome to Fitnet. Here we are driven to help you achieve your full potential through our gyms, workout plans, and suppliments along with trainers 24/7! We will help you achieve the body type you want and we will be with you all the way! Our locations are open 24/7 and are state of the art facilities taht are equipped with carido, muscle, and recovery machinces, there is something for everyone!</p>
+        <img class="imagesz" src="./images/11-Beach-gym.png">
         <h2>Our Locations </p>
-            <img src="./images/Locations.jpg">
+            <img class="imageszz" src="./images/Locations.jpg">
             <p>370 W 7th S Rexburg, Id</p>
-            <img src="./images/The-Greenpoint-gym.jpg">
+            <img class="images" src="./images/The-Greenpoint-gym.jpg">
             <p>110 E 9th N Rexburg, Id</p>
-            <img src="./images/397-TorranceDelAmo-01-900x650.jpg">
+            <img class="images" src="./images/397-TorranceDelAmo-01-900x650.jpg">
             <p>550 W 21 N Rexburg, Id</p>
-            <img src="./images/Two-Fifty-West-81st-gym.jpg">
+            <img class="images" src="./images/Two-Fifty-West-81st-gym.jpg">
+     
 
         
        </main>
