--- a/WRR_Project/Site-SupplimentPage.html
+++ b/WRR_Project/Site-SupplimentPage.html
@@ -24,12 +24,12 @@
            </div>
            <section id="hero-msg">
                <h1 class="home-title">Meals and Suppliments</h1>
-               <p>Types of Protein</p>
-               <img src="./images/download.jpg">
+               <h2>Types of Protein</h2>
+               <img class="imageszzz" src="./images/download.jpg">
                <p> Isolate Protein: Is the best and most expensive kind of protein, it is taken from Whey protein and laced with enzynes that help the speed of protein breakdown in the stomach so you get more protein in your system quicker after a workout to maximize your gains!</p>
-               <img src="./images/R.jpg">
+               <img Class="imageszzz" src="./images/R.jpg">
                <p> Whey Protein: Most basic and cheapest form of protein, it is whey protein which is taken from pure milk with not added preseritives, you can get about 30 grams per hour so this protein is good to take multiple times a day.</p>
-               <img src="./images/001875633.webp">
+               <img Class="imageszzz" src="./images/001875633.webp">
                <p> Organic Protein: Our organic protein is taken from plant extract and peanuts for a great source of fully vegtarian protein powder that can be digested in 20 grams per hour</p>
             <p> </p>
             <p> </p>
